--- a/src/main/resources/com/example/calculatorproject/hello-view.fxml
+++ b/src/main/resources/com/example/calculatorproject/hello-view.fxml
@@ -1,16 +1,121 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.calculatorproject.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.calculatorproject.HelloController">
+   <children>
+      <Text fx:id="mainText" strokeType="OUTSIDE" strokeWidth="0.0">
+         <font>
+            <Font size="66.0" />
+         </font></Text>
+      <HBox prefHeight="100.0" prefWidth="600.0">
+         <children>
+            <Button mnemonicParsing="false" onAction="#oneButtonClick" text="1">
+               <font>
+                  <Font size="37.0" />
+               </font></Button>
+            <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#twoButtonClick" text="2">
+               <font>
+                  <Font size="37.0" />
+               </font>
+            </Button>
+            <Button layoutX="149.0" layoutY="10.0" mnemonicParsing="false" onAction="#threeButtonClick" text="3">
+               <font>
+                  <Font size="37.0" />
+               </font>
+            </Button>
+            <Button layoutX="219.0" layoutY="10.0" mnemonicParsing="false" onAction="#plusButtonClick" text="+">
+               <font>
+                  <Font size="37.0" />
+               </font>
+            </Button>
+            <Button layoutX="218.0" layoutY="10.0" mnemonicParsing="false" onAction="#minusButtonClick" text="-">
+               <font>
+                  <Font size="37.0" />
+               </font>
+            </Button>
+         </children>
+      </HBox>
+      <HBox layoutX="10.0" layoutY="26.0" prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <Button mnemonicParsing="false" onAction="#fourButtonClick" text="4">
+               <font>
+                  <Font size="37.0" />
+               </font>
+            </Button>
+            <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#fiveButtonClick" text="5">
+               <font>
+                  <Font size="37.0" />
+               </font>
+            </Button>
+            <Button layoutX="79.0" layoutY="10.0" mnemonicParsing="false" onAction="#sixButtonClick" text="6">
+               <font>
+                  <Font size="37.0" />
+               </font>
+            </Button>
+            <Button layoutX="149.0" layoutY="10.0" mnemonicParsing="false" onAction="#multiplictionButtonClick" prefHeight="78.0" prefWidth="74.0" text="*">
+               <font>
+                  <Font size="37.0" />
+               </font>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#divisionButtonClick" prefHeight="78.0" prefWidth="66.0" text="/">
+               <font>
+                  <Font size="37.0" />
+               </font>
+            </Button>
+         </children>
+      </HBox>
+      <HBox layoutX="10.0" layoutY="126.0" prefHeight="78.0" prefWidth="391.0">
+         <children>
+            <Button mnemonicParsing="false" onAction="#sevenButtonClick" text="7">
+               <font>
+                  <Font size="37.0" />
+               </font>
+            </Button>
+            <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#eightButtonClick" text="8">
+               <font>
+                  <Font size="37.0" />
+               </font>
+            </Button>
+            <Button layoutX="79.0" layoutY="10.0" mnemonicParsing="false" onAction="#nineButtonClick" text="9">
+               <font>
+                  <Font size="37.0" />
+               </font>
+            </Button>
+            <Button layoutX="149.0" layoutY="10.0" mnemonicParsing="false" onAction="#powerButtonClick" prefHeight="78.0" prefWidth="73.0" text="^">
+               <font>
+                  <Font size="34.0" />
+               </font>
+            </Button>
+         </children>
+      </HBox>
+      <HBox layoutX="10.0" layoutY="226.0" prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <Button mnemonicParsing="false" onAction="#equalButtonClick" prefHeight="86.0" prefWidth="69.0" text="=">
+               <font>
+                  <Font size="34.0" />
+               </font>
+            </Button>
+            <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#zeroButtonClick" text="0">
+               <font>
+                  <Font size="37.0" />
+               </font>
+            </Button>
+            <Button layoutX="79.0" layoutY="10.0" mnemonicParsing="false" onAction="#openParenthesisButtonClick" prefHeight="125.0" prefWidth="69.0" text="(">
+               <font>
+                  <Font size="34.0" />
+               </font>
+            </Button>
+            <Button layoutX="149.0" layoutY="10.0" mnemonicParsing="false" onAction="#closedParenthesisButtonClick" prefHeight="78.0" prefWidth="73.0" text=")">
+               <font>
+                  <Font size="37.0" />
+               </font>
+            </Button>
+         </children>
+      </HBox>
+   </children>
 </VBox>
